--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,139 +1,263 @@
-/*BASE STYLES*/
 html {
   font-size: 18px;
   line-height: 1.4;
-  font-family: Helvetica;
-  box-sizing: border-box;
+  font-family: helvetica;
 }
+
 body {
-  display: flex;
   flex-direction: column;
   height: 100vh;
 }
-main {
-  flex: 1;
+
+footer {
+  margin-top: auto;
+}
+
+.layout {
+  width: 960px;
+  margin: auto;
+}
+
+.container {
+  display: flex;
 }
 
 
-/*Header*/
+/*header*/
+
+
+
 .header {
   background-image: url("../images/glasses-bg.png");
-  background-size: cover;
-  background-position: center;
   height: 30rem;
+  background-size: cover;
 }
-.top-header {
-  width: 960px;
-  margin: auto;
-  display: flex;
+
+.top-header-content {
+  background-color: cadetblue;
+  font-size: 1rem;
+  align-items: center;
   position: relative;
   top: 1rem;
-  justify-content: space-between;
-  background-color: cadetblue;
   color: white;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  font-weight: bold;
 }
-.top-header-content {
-  display: flex;
-  align-items: center;
-}
+
 .top-header-content img{
-  padding-left: 2rem;
-  padding-right: 1rem;
+  margin-left: 2rem;
+  margin-right: 1rem;
   height: 1.5rem;
 }
-.top-header-content span {
-padding-left: 2rem;
-padding-right: 2rem;
+
+.top-header-content nav{
+  margin-left: auto;
 }
-.banner-header {
-  width: 960px;
-  margin: auto;
-  display: flex;
+
+.top-header-content nav span {
+  margin: 1rem 2rem 1rem 0;
+}
+
+.banner-header-content {
   position: relative;
   top: 10rem;
-  left: 3rem;
   justify-content: flex-end;
 }
-.banner-header-content {
-  width: 50%;
-  text-align: center;
+
+.banner-header-content h2 {
   font-weight: bold;
   font-size: 2rem;
   line-height: 1.2;
-  background-color: white;
   padding: 1.5rem 5rem;
+  text-align: right;
+  background-color: white;
+  margin-right: -2rem;
+}
+.mobile {
+  display: none;
 }
 
-/*Main*/
-.top-main {
-  display: flex;
-  width: 960px;
-  margin: auto;
-  justify-content: center;
+@media only screen and (max-width: 1050px) {
+
+.layout {
+  width: 100%;
+}
+
+.header {
+  height: 22rem;
+}
+
+.banner-header-content {
+  top: 5rem;
+}
+
+.banner-header-content h2 {
+  font-size: 1.33rem;
+  padding: .75rem 4rem;
+  background-color: white;
+  margin-right: 2rem;
+}
+}
+
+@media only screen and (max-width: 750px) {
+
+.layout {
+  width: 100%;
+}
+
+.desktop {
+  display: none;
+}
+
+.mobile {
+  display: inherit;
+}
+
+.header {
+  height: 17rem;
+  background-position: 20%;
+}
+
+.top-header-content {
+  position: static;
+}
+.banner-header-content {
+  top: 9rem;
+}
+
+.banner-header-content h2 {
+  font-size: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: center;
+  margin-right: 2rem;
+}
+
+}
+
+
+/*Main Page*/
+
+.main-top {
   margin-top: 3rem;
+  margin-bottom: 3rem;
+  justify-content: center;
 }
-.top-main-content {
-  display: flex;
+
+.main-top div {
   flex-direction: column;
-  justify-content: space-between;
-  height: 8rem;
-  align-items: center;
-  width: 10%;
-  margin-left: 3rem;
-  margin-right: 3rem;
-}
-.ruler,
-.truck {
+  margin: 0 3rem;
   width: 5rem;
+  height: 8rem;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+
 }
-.paper {
+
+.paper img{
   width: 3.5rem;
 }
-.top-main-content span{
-  text-align: center;
+
+.ruler img ,
+.truck img {
+  max-width: 5rem;
 }
 
-.bottom-main {
-  width: 960px;
-  margin: auto;
-  display: flex;
-  margin-top: 3rem;
-  height: auto;
+.main-bottom {
   justify-content: center;
-}
-.bottom-main-content {
-  display: flex;
-  flex-direction: column;
-  width: 35%;
-  margin-left: 5%;
   margin-bottom: 5rem;
 }
 
-.bottom-main-content span{
-  width: 10rem;
-  background-color: cadetblue;
-  padding: 0.5rem 0rem 0.5rem 1.25rem;
-  color: white;
-  font-size: 1rem;
-  font-weight: bold;
-  margin-bottom: 1rem;
+.main-bottom div {
+  flex-direction: column;
+  width: 35%;
+  margin: 0 2.5%;
 }
 
+.main-bottom div h1 {
+  margin-bottom: 1rem;
+  font-weight: bold;
+  color: white;
+  font-size: 1rem;
+  background-color: cadetblue;
+  padding: 0.5rem 0 0.5rem 1.25rem;
+  width: 10rem;
+}
+
+@media only screen and (max-width: 750px) {
+   .layout {
+     width: 100%;
+   }
+
+  .main-top {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main-top div {
+    flex-direction: column;
+    margin-top: 1.54rem;
+    justify-content: space-around;
+    font-size: 0.77rem;
+  }
+
+  .main-bottom {
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 5rem;
+    flex-direction: column;
+  }
+
+  .main-bottom div {
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 4rem;
+
+  }
+
+  .main-bottom div h1 {
+    margin-bottom: 1rem;
+    padding: 0.5rem 0;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+
 /*Footer*/
+
+footer {
+  background-color: azure;
+}
+
 .footer {
-  width: 960px;
-  margin: auto;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
-.footer-content {
-  display: flex;
-  align-items: center;
-}
-.footer-content img {
+
+.footer img {
   height: 1.5rem;
-  padding-left: 4rem;
-  padding-right: 1rem;
+  margin-left: 4rem;
+  margin-right: 1rem;
+}
+
+@media only screen and (max-width: 750px) {
+
+  .footer {
+    margin-top:  0;
+    justify-content: center;
+  }
+
+  .footer img {
+    height: 1.5rem;
+    margin: 0;
+  }
+
+  .footer span {
+    display: none;
+  }
+
 }
